# subomatic

./: .gitignore  Cargo.toml  DESIGN.md  NOTICE  PACKAGING.md  README.md  build.sh  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  release-signed.yml  release.yml
crates/subomatic-cli/: Cargo.toml
crates/subomatic-cli/src/: decode.rs  main.rs  wav.rs
crates/subomatic-core/: Cargo.toml
crates/subomatic-core/src/: align.rs  ass.rs  convert.rs  cue.rs  lib.rs  microdvd.rs  srt.rs  text.rs  vad.rs  vtt.rs
crates/subomatic-core/tests/: sync.rs
crates/subomatic-opensubtitles/: Cargo.toml
crates/subomatic-opensubtitles/src/: lib.rs
crates/subomatic-wasm/: Cargo.toml
crates/subomatic-wasm/src/: lib.rs
scripts/: release.env.example  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: app.js  how-it-works.html  index.html  style.css
