[package]
name = "subomatic-desktop"
version = "0.1.4"
description = "Subomatic — native desktop app for automatic subtitle synchronization"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "subomatic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The shared engine: parse/serialize + VAD + alignment. Native build here; the
# exact same crate compiles to WASM for the web app. `earshot` gives the sharper
# neural voice-activity detector (the recommended default in the UI).
subomatic-core = { path = "../crates/subomatic-core", features = ["earshot"] }

# `macos-private-api` is required to enable `macOSPrivateApi` in tauri.conf.json,
# which lets the window be transparent so the native vibrancy material shows.
tauri = { version = "2", features = ["macos-private-api"] }
# default-features off: the default rustls-tls pulls in `ring`, whose C build
# script breaks under cargo-xwin. native-tls uses the OS TLS stack instead
# (schannel on Windows, Security.framework on macOS) — nothing to cross-compile.
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }

serde = { version = "1", features = ["derive"] }
# Direct dep because `tauri::generate_context!` references it once a `plugins`
# section exists in tauri.conf.json.
serde_json = "1"

# macOS-only: the native vibrancy ("frosted glass") material behind the window.
# Already in the lock as a transitive Tauri dep, so this pins the same version
# without a fresh resolve. Gated below so non-macOS builds never see it.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
