[package]
name = "subomatic-opensubtitles"
version = "0.0.0"
description = "OpenSubtitles REST API client for fetching subtitles (native)."
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
