[package]
name = "subomatic-wasm"
version = "0.0.0"
description = "WebAssembly bindings for the Subomatic subtitle-sync core."
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
subomatic-core = { path = "../subomatic-core" }
wasm-bindgen = "0.2"
