[package]
name = "subomatic-wasm"
version = "0.0.0"
description = "WebAssembly bindings for the Subomatic subtitle-sync core."
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Enable the neural EarshotVad: EnergyVad keys on loudness, which misfires badly
# on music/effects-heavy tracks (it picks up gunfire as "speech"), so the web
# app aligns audio with the sharper detector by default.
subomatic-core = { path = "../subomatic-core", features = ["earshot"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
